# vibe-secure

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-security.md
examples/: sample-report.html
src/vibe_secure/: __init__.py  agent.py  cli.py  detect.py  investigation.py  investigator.py  models.py  report.py  scanner.py
tests/: test_investigator.py  test_scanner.py
