[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-secure"
version = "0.2.0"
description = "A first security review for solo founders building applications with AI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Reecha Kansal" }]
keywords = ["security", "solo-founders", "vibe-coding", "prompt-injection", "mcp", "agent-security", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "build>=1"]

[project.urls]
Homepage = "https://github.com/rikansal-alt/vibe-secure"
Issues = "https://github.com/rikansal-alt/vibe-secure/issues"

[project.scripts]
vibe-secure = "vibe_secure.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
